logs/dag_id=postgres_operator_dag/run_id=manual__2024-05-06T105101.351962+0000/task_id=insert_to_postgres/attempt=2.log
[2024-05-06T10:56:09.642+0000] {local_task_job_runner.py:120} INFO - ::group::Pre task execution logs
[2024-05-06T10:56:09.664+0000] {taskinstance.py:2073} INFO - Dependencies all met for dep_context=non-requeueable deps ti=<TaskInstance: postgres_operator_dag.insert_to_postgres manual__2024-05-06T10:51:01.351962+00:00 [queued]>
[2024-05-06T10:56:09.674+0000] {taskinstance.py:2073} INFO - Dependencies all met for dep_context=requeueable deps ti=<TaskInstance: postgres_operator_dag.insert_to_postgres manual__2024-05-06T10:51:01.351962+00:00 [queued]>
[2024-05-06T10:56:09.675+0000] {taskinstance.py:2303} INFO - Starting attempt 2 of 3
[2024-05-06T10:56:09.688+0000] {taskinstance.py:2327} INFO - Executing <Task(PythonOperator): insert_to_postgres> on 2024-05-06 10:51:01.351962+00:00
[2024-05-06T10:56:09.693+0000] {warnings.py:110} WARNING - /home/***/.local/lib/python3.12/site-packages/***/task/task_runner/standard_task_runner.py:61: DeprecationWarning: This process (pid=957) is multi-threaded, use of fork() may lead to deadlocks in the child.
  pid = os.fork()

[2024-05-06T10:56:09.694+0000] {standard_task_runner.py:63} INFO - Started process 958 to run task
[2024-05-06T10:56:09.694+0000] {standard_task_runner.py:90} INFO - Running: ['***', 'tasks', 'run', 'postgres_operator_dag', 'insert_to_postgres', 'manual__2024-05-06T10:51:01.351962+00:00', '--job-id', '100', '--raw', '--subdir', 'DAGS_FOLDER/kachevo.py', '--cfg-path', '/tmp/tmpq30y7nqv']
[2024-05-06T10:56:09.697+0000] {standard_task_runner.py:91} INFO - Job 100: Subtask insert_to_postgres
[2024-05-06T10:56:09.734+0000] {task_command.py:426} INFO - Running <TaskInstance: postgres_operator_dag.insert_to_postgres manual__2024-05-06T10:51:01.351962+00:00 [running]> on host db2363de7199
[2024-05-06T10:56:09.813+0000] {taskinstance.py:2644} INFO - Exporting env vars: AIRFLOW_CTX_DAG_OWNER='***' AIRFLOW_CTX_DAG_ID='postgres_operator_dag' AIRFLOW_CTX_TASK_ID='insert_to_postgres' AIRFLOW_CTX_EXECUTION_DATE='2024-05-06T10:51:01.351962+00:00' AIRFLOW_CTX_TRY_NUMBER='2' AIRFLOW_CTX_DAG_RUN_ID='manual__2024-05-06T10:51:01.351962+00:00'
[2024-05-06T10:56:09.814+0000] {taskinstance.py:430} INFO - ::endgroup::
[2024-05-06T10:56:09.840+0000] {base.py:84} INFO - Using connection ID 'postgres' for task execution.
[2024-05-06T10:56:09.882+0000] {taskinstance.py:441} INFO - ::group::Post task execution logs
[2024-05-06T10:56:09.883+0000] {taskinstance.py:2890} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/models/taskinstance.py", line 465, in _execute_task
    result = _execute_callable(context=context, **execute_callable_kwargs)
             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/models/taskinstance.py", line 432, in _execute_callable
    return execute_callable(context=context, **execute_callable_kwargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/models/baseoperator.py", line 400, in wrapper
    return func(self, *args, **kwargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/operators/python.py", line 235, in execute
    return_value = self.execute_callable()
                   ^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/operators/python.py", line 252, in execute_callable
    return self.python_callable(*self.op_args, **self.op_kwargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/opt/airflow/dags/kachevo.py", line 72, in insert_to_postgres
    cursor.execute("INSERT INTO pet VALUES (%s, %s, %s, %s, %s)", mysql_result)
psycopg2.errors.SyntaxError: ОШИБКА:  ошибка синтаксиса (примерное положение: "%")
LINE 1: INSERT INTO pet VALUES (%s, %s, %s, %s, %s)
                                ^

[2024-05-06T10:56:09.892+0000] {taskinstance.py:1205} INFO - Marking task as UP_FOR_RETRY. dag_id=postgres_operator_dag, task_id=insert_to_postgres, execution_date=20240506T105101, start_date=20240506T105609, end_date=20240506T105609
[2024-05-06T10:56:09.902+0000] {standard_task_runner.py:110} ERROR - Failed to execute job 100 for task insert_to_postgres (ОШИБКА:  ошибка синтаксиса (примерное положение: "%")
LINE 1: INSERT INTO pet VALUES (%s, %s, %s, %s, %s)
                                ^
; 958)
[2024-05-06T10:56:09.908+0000] {local_task_job_runner.py:240} INFO - Task exited with return code 1
[2024-05-06T10:56:09.923+0000] {taskinstance.py:3482} INFO - 0 downstream tasks scheduled from follow-on schedule check
[2024-05-06T10:56:09.926+0000] {local_task_job_runner.py:222} INFO - ::endgroup::
